# Kakdela-p2p

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  keystore.properties  proguard-rules.pro  settings.gradle.kts
.github/workflows/: android-ci.yml  auto-fix-and-build.yml  build.yml  unpack-and-commit.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/kar/: song_01.kar  song_02.kar  song_03.kar  song_04.kar  song_05.kar  song_06.kar  song_07.kar  song_08.kar  song_09.kar  song_10.kar  song_11.kar  song_12.kar  song_13.kar  song_14.kar  song_15.kar  song_16.kar  song_17.kar  song_18.kar  song_19.kar  song_20.kar
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/kakdela/p2p/: App.kt  MainActivity.kt  MainApplication.kt
app/src/main/java/com/vasilisinaazbuka/: MainActivity.kt  VasilisinaAzbukaApp.kt
app/src/main/res/drawable/: app_background.xml  splash_background.xml
app/src/main/res/drawable-night/: splash_background.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values /: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: Colors.xml  colors.xml  styles.xml  themes.xml
app/src/main/res/values-night-v8/: Colors.xml  values-night-v8.xml
app/src/main/res/xml/: file_paths.xml
blob/main/: gradle.properties
blob/main/app/: build.gradle.kts
goterl/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
res/values/: strings.xml
(+66 files in other folders)
